<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/white_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="right"
            android:text="@string/white_player"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/white_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="right"
            android:textColor="#FFFFFF" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/white"
            android:src="@drawable/stone_white" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:textColor="#FFFFFF" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/black"
            android:src="@drawable/stone_black" />

        <TextView
            android:id="@+id/black_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="left"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/black_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="left"
            android:text="@string/black_player"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/goban"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/board"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/review_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/first"
            android:layout_width="0dp"
            android:layout_height="22pt"
            android:layout_margin="4dp"
            android:layout_weight=".25"
            android:background="@drawable/first"
            android:gravity="center"
            android:onClick="goFirst" />

        <Button
            android:id="@+id/previous"
            android:layout_width="0dp"
            android:layout_height="22pt"
            android:layout_margin="4dp"
            android:layout_weight=".25"
            android:background="@drawable/prev"
            android:gravity="center"
            android:onClick="undo" />

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="22pt"
            android:layout_margin="4dp"
            android:layout_weight=".25"
            android:background="@drawable/next"
            android:gravity="center"
            android:onClick="goNext" />

        <Button
            android:id="@+id/last"
            android:layout_width="0dp"
            android:layout_height="22pt"
            android:layout_margin="4dp"
            android:layout_weight=".25"
            android:background="@drawable/last"
            android:gravity="center"
            android:onClick="goLast" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ongoing_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/undo"
            style="@style/buttonStyle"
            android:layout_margin="4dp"
            android:onClick="undo"
            android:text="@string/undo" />

        <Button
            android:id="@+id/pass"
            style="@style/buttonStyle"
            android:layout_margin="4dp"
            android:onClick="pass"
            android:text="@string/pass" />

        <Button
            android:id="@+id/give_up"
            style="@style/buttonStyle"
            android:layout_margin="4dp"
            android:onClick="giveUp"
            android:text="@string/give_up" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/territory_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/cancel"
            style="@style/buttonStyle"
            android:layout_margin="4dp"
            android:onClick="cancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/proceed"
            style="@style/buttonStyle"
            android:layout_margin="4dp"
            android:onClick="proceed"
            android:text="@string/proceed" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/over_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/review"
            style="@style/buttonStyle"
            android:layout_margin="4dp"
            android:onClick="review"
            android:text="@string/review" />

        <Button
            android:id="@+id/play_again"
            style="@style/buttonStyle"
            android:layout_margin="4dp"
            android:onClick="playAgain"
            android:text="@string/play_again" />
    </LinearLayout>

</LinearLayout>